--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Watch you words!
-description: [Lexical analysis of U.S. politicians]
+description: Lexical analysis of U.S. politicians
